2008-03-31  Badlop  <badlop@process-one.net>

	* doc/webadmmain.png: Updated to ejabberd 2.0.0
	* doc/webadmmainru.png: Likewise

	* doc/disco.png: Removed because not used
	
	* doc/guide.tex: Fix Latex reference to webadmin section. Update
	explanation of screenshots. Update xmpp addresses of Mickael
	Remond and Sander Devrieze.
	* doc/guide.html: Likewise

	* doc/Makefile: Remove the Hevea deprecated option -noiso
	* doc/guide.html: Likewise
	* doc/dev.html: Likewise
	* doc/features.html: Likewise

	* src/ejabberd_listener.erl (start_listener): Start also the
	supervisor of the module

2008-03-27  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix epam location (thanks to Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-03-26  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Support for parallel compilation with 'make -j'
	in multi core CPUs: fix compilation dependencies; compile
	behaviors before other source code. (thanks to Jonathan Schleifer)
	* src/mod_pubsub/Makefile.in: Likewise
	* src/eldap/Makefile.in: Likewise

2008-03-26  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_local.erl: The iq_response table wasn't cloned
	automatically on all nodes which resulted in a single point of
	failure

2008-03-25  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Failure to install epam is not
	critical (EJAB-573). Only try to install epam if pam was enabled
	in configure script (thanks to Etan Reisner)(EJAB-586)

2008-03-24  Badlop  <badlop@process-one.net>

	* doc/guide.tex: mod_vcard_ldap replace NICK with NICKNAME (thanks
	to Andreas Ntaflos)
	* doc/guide.html: Likewise

	* src/msgs/de.msg: Fix irc typo (thanks to Jonathan Schleifer)
	* src/msgs/cs.msg: Likewise
	* src/msgs/pl.msg: Likewise
	* src/msgs/sk.msg: Likewise

2008-03-22  Mickael Remond  <mremond@process-one.net>

	* src/eldap/Makefile.in: Generate ELDAPv3.beam during first Makefile
	pass (EJAB-583).

2008-03-22  Badlop  <badlop@process-one.net>
